k8s-manifest/nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: nginx
#   namespace: test
#   labels:
#     env: dev
# spec:
#   containers:
#   - name: nginx
#     image: nginx
#     ports:
#     - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
#   namespace: test
# spec:
#   selector:
#     env: dev
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: test
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    ports:
    -  containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test
spec:
  selector:
    env: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
