k8s-manifest/sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-sa-pod
  namespace: default
spec:
  serviceAccountName: aws-sa
  automountServiceAccountToken: true
  containers:
  - name: aws-sa-container
    image: amazonlinux:latest
    command: ["/bin/sh", "-c", "sleep 3600"]
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aws-sa-service
  namespace: default
spec:
  selector:
    app: aws-sa
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80


# kubectl auth can-i get pods --as=system:serviceaccount:default:aws-sa
